; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_dlltool.c_prefix_encode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_dlltool.c_prefix_encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prefix_encode.alpha = internal global [26 x i8] c"abcdefghijklmnopqrstuvwxyz", align 16
@prefix_encode.buf = internal global [32 x i8] zeroinitializer, align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @prefix_encode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @prefix_encode(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @strcpy(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @prefix_encode.buf, i64 0, i64 0), i8* %6)
  %8 = call i8* @strchr(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @prefix_encode.buf, i64 0, i64 0), i8 signext 0)
  store i8* %8, i8** %5, align 8
  br label %9

9:                                                ; preds = %17, %2
  %10 = load i32, i32* %4, align 4
  %11 = zext i32 %10 to i64
  %12 = urem i64 %11, 26
  %13 = getelementptr inbounds [26 x i8], [26 x i8]* @prefix_encode.alpha, i64 0, i64 %12
  %14 = load i8, i8* %13, align 1
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %5, align 8
  store i8 %14, i8* %15, align 1
  br label %17

17:                                               ; preds = %9
  %18 = load i32, i32* %4, align 4
  %19 = zext i32 %18 to i64
  %20 = udiv i64 %19, 26
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %4, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %9, label %23

23:                                               ; preds = %17
  %24 = load i8*, i8** %5, align 8
  store i8 0, i8* %24, align 1
  ret i8* getelementptr inbounds ([32 x i8], [32 x i8]* @prefix_encode.buf, i64 0, i64 0)
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
